--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,123 @@
+anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-attrs==21.2.0
+asttokens==2.1.0
+async-generator==1.10
+attrs==21.4.0
+Babel==2.11.0
 backcall==0.2.0
-backports.entry-points-selectable==1.1.1
-bleach==4.1.0
-bmi==1.0.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9
-click==8.0.3
+charset-normalizer==2.0.12
+click==8.1.3
 colorama==0.4.4
-css==0.1
+contourpy==1.0.6
+cryptography==37.0.2
 cycler==0.11.0
-debugpy==1.5.1
-decorator==5.1.0
+debugpy==1.6.3
+decorator==5.1.1
 defusedxml==0.7.1
-distlib==0.3.4
-docutils==0.18.1
-entrypoints==0.3
-filelock==3.4.0
-Flask==2.0.2
-fonttools==4.28.4
+distlib==0.3.6
+entrypoints==0.4
+executing==1.2.0
+fake-headers==1.0.2
+fastjsonschema==2.16.2
+filelock==3.8.2
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
+fonttools==4.38.0
+greenlet==2.0.1
 gunicorn==20.1.0
-heroku==0.1.4
-htmlmin==0.1.12
+h11==0.13.0
+html5lib==1.1
 idna==3.3
-ImageHash==4.2.1
-importlib-metadata==4.9.0
-importlib-resources==5.4.0
-ipykernel==6.6.0
-ipython==7.30.1
+importlib-metadata==5.0.0
+ipykernel==6.17.0
+ipython==8.6.0
 ipython-genutils==0.2.0
-ipywidgets==7.6.5
-itsdangerous==2.0.1
-javascript==1!0.2.14
+itsdangerous==2.1.2
 jedi==0.18.1
-Jinja2==3.0.3
-joblib==1.0.1
-jsonschema==4.3.1
-jupyter==1.0.0
-jupyter-client==7.1.0
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-keyring==23.4.0
-kiwisolver==1.3.2
-llvmlite==0.37.0
-lxml==4.7.1
-MarkupSafe==2.0.1
-matplot==0.1.9
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-missingno==0.5.0
-mistune==0.8.4
-multimethod==1.7
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-neighbors==0.1.0
-nest-asyncio==1.5.4
-networkx==2.6.3
-notebook==6.4.6
-numba==0.54.1
-numpy==1.20.3
+Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.10
+jsonschema==4.17.0
+jupyter-server==1.23.0
+jupyter_client==7.4.1
+jupyter_core==4.11.2
+jupyterlab==3.5.0
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.16.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
+nbclassic==0.4.8
+nbclient==0.7.0
+nbconvert==7.2.3
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.23.5
+outcome==1.1.0
+package-name==0.1
 packaging==21.3
-pandas==1.3.5
-pandas-profiling==3.1.0
+pandas==1.5.1
 pandocfilters==1.5.0
 parso==0.8.3
-phik==0.12.0
 pickleshare==0.7.5
-Pillow==8.4.0
-pkginfo==1.8.2
-platformdirs==2.4.0
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
+Pillow==9.3.0
+platformdirs==2.6.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
+psutil==5.9.0
+pure-eval==0.2.2
 pycparser==2.21
-pydantic==1.9.0
-Pygments==2.10.0
-pyloco==0.0.139
-pyparsing==3.0.6
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.1
-pyrsistent==0.18.0
-python-dateutil==1.5
-pytz==2021.3
-PyWavelets==1.2.0
-pywin32==302
-pywin32-ctypes==0.2.0
-pywinpty==1.1.6
-PyYAML==6.0
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==1.11.3
-readme-renderer==32.0
-requests==2.26.0
-requests-toolbelt==0.9.1
-rfc3986==1.5.0
-scikit-learn==1.0.1
-scipy==1.7.3
-seaborn==0.11.2
+Pygments==2.13.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyrsistent==0.19.2
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.6
+pywin32==304
+pywinpty==2.0.9
+pyzmq==24.0.1
+requests==2.27.1
+scikit-learn==0.24.2
+scipy==1.9.3
+seaborn==0.12.1
+selenium==4.1.5
 Send2Trash==1.8.0
-SimpleWebSocketServer==0.1.1
 six==1.16.0
-sklearn==0.0
-tangled-up-in-unicode==0.1.0
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==3.0.0
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-twine==3.7.1
-typing==3.7.4.3
-typing_extensions==4.0.1
-urllib3==1.26.7
-ushlex==0.99.1
-virtualenv==20.10.0
-visions==0.7.4
+sklearn==0.0.post1
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.43
+stack-data==0.6.0
+tabulate==0.8.9
+terminado==0.17.0
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.2
+traitlets==5.5.0
+trio==0.20.0
+trio-websocket==0.9.2
+undetected-chromedriver==3.1.5.post4
+urllib3==1.26.9
+virtualenv==20.17.1
+voila==0.4.0
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.2.3
-Werkzeug==2.0.2
-widgetsnbextension==3.5.2
-wordcloud==1.8.1
-zipp==3.6.0
+websocket-client==1.4.2
+websockets==10.3
+Werkzeug==2.2.2
+WMI==1.5.1
+wsproto==1.1.0
+zipp==3.10.0
